--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -166,11 +166,13 @@ jobs:
         if: runner.os == 'Linux'
         run: | 
           sudo apt install mysql-server
+          sudo systemctl start mysql
           
       - name: "[Custom block] [macOS] Install MYSQL"
         if: runner.os == 'macOS'
         run: | 
           brew install mysql
+          mysql.server start
 
       - name: "[Custom block] Prepare MYSQL"
         run: |
