--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -175,9 +175,9 @@ jobs:
 
       - name: "[Custom block] Prepare MySQL"
         run: |
-          mysql -e --host 127.0.0.1 "CREATE DATABASE IF NOT EXISTS test; ALTER DATABASE test CHARACTER SET 'utf8'; FLUSH PRIVILEGES;" -uroot
-          mysql -e --host 127.0.0.1 "CREATE USER '"${USER}"'@'localhost'; FLUSH PRIVILEGES;" -uroot || true
-          mysql -e --host 127.0.0.1 "GRANT ALL PRIVILEGES ON test.* TO '"${USER}"'@'localhost'; FLUSH PRIVILEGES;" -uroot
+          mysql --host 127.0.0.1 -e "CREATE DATABASE IF NOT EXISTS test; ALTER DATABASE test CHARACTER SET 'utf8'; FLUSH PRIVILEGES;" -uroot
+          mysql --host 127.0.0.1 -e "CREATE USER '"${USER}"'@'localhost'; FLUSH PRIVILEGES;" -uroot || true
+          mysql --host 127.0.0.1 -e "GRANT ALL PRIVILEGES ON test.* TO '"${USER}"'@'localhost'; FLUSH PRIVILEGES;" -uroot
 
       - name: "[Stage] Install"
         if: matrix.config.os != 'macOS-latest' || matrix.config.r != 'devel'
