--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,26 +21,22 @@ jobs:
       matrix:
         config:
           # comment out lines if you do not want to build on certain platforms
-          #- { os: windows-latest, r: "release" }
-          #- { os: macOS-latest, r: "release", pkgdown: "true" }
-          #- { os: macOS-latest, r: "devel" }
-          - { os: ubuntu-latest, r: "release", TIC_DEV_VERSIONS: true, id: "dev versions"}
-          #- { os: macOS-latest,  r: "release", TIC_ONLY_TESTS:   true, id: "only tests"}
-          - { os: macOS-latest,  r: "release", pkgdown:   "true", id: "pkgdown"}
-
           # [Custom env var matrix]
-          #- { os: ubuntu-latest, r: "release", TIC_DEV_VERSIONS: true }
+          - { os: macOS-latest, r: "devel", TIC_ONLY_TESTS: true, TIC_DEV_VERSIONS: true,  id: "TIC_ONLY_TESTS & TIC_DEV_VERSIONS" }
+          # [Custom env var matrix]
+          - { os: macOS-latest, r: "devel" }
+          # [Custom env var matrix]
+          - { os: macOS-latest, r: "release" }
           ## [Custom env var matrix]
-          #- { os: ubuntu-latest, r: 3.4,       TIC_DEV_VERSIONS: true }
+          - { os: ubuntu-latest, r: "release", TIC_ONLY_STYLER: true, id: "TIC_ONLY_STYLER" }
           ## [Custom env var matrix]
-          #- { os: ubuntu-latest, r: 3.5,       TIC_DEV_VERSIONS: true }
-
-          ## [Custom env var matrix]
-          #- { os: ubuntu-latest, r: "release", TIC_ONLY_TESTS: true }
-          ## [Custom env var matrix]
-          #- { os: ubuntu-latest, r: "release", TIC_ONLY_STYLE: true }
-          ## [Custom env var matrix]
-          #- { os: ubuntu-latest, r: "release", MODE: "db-tests" }
+          - { os: ubuntu-latest, r: "release", MODE: "db-tests", id: "db-tests" }
+          # [Custom env var matrix]
+          - { os: ubuntu-latest, r: 3.6 }
+          # [Custom env var matrix]
+          - { os: ubuntu-latest, r: 3.5 }
+          # [Custom env var matrix]
+          - { os: ubuntu-latest, r: 3.4 }
 
     env:
       # otherwise remotes::fun() errors cause the build to fail. Example: Unavailability of binaries
@@ -130,16 +126,6 @@ jobs:
       # install ccache and write config file
       # mirror the setup described in https://github.com/rmacoslib/r-macos-rtools
       - name: "[macOS] ccache"
-        if: runner.os == 'macOS' && matrix.config.r != 'devel'
-        run: |
-          brew install ccache
-          wget https://cran.r-project.org/bin/macosx/tools/clang-7.0.0.pkg
-          sudo installer -package clang-7.0.0.pkg -target /
-          mkdir -p ~/.R && echo -e 'CC=ccache clang\nCPP=ccache clang\nCXX=ccache clang++\nCXX11=ccache clang++\nCXX14=ccache clang++\nCXX17=ccache clang++\nCFLAGS=-isysroot /Library/Developer/CommandLineTools/SDKs/MacOSX.sdk\nCCFLAGS=-isysroot /Library/Developer/CommandLineTools/SDKs/MacOSX.sdk\nCXXFLAGS=-isysroot /Library/Developer/CommandLineTools/SDKs/MacOSX.sdk\nCPPFLAGS=-isysroot /Library/Developer/CommandLineTools/SDKs/MacOSX.sdk -I/usr/local/include\nF77=ccache /usr/local/gfortran/bin/gfortran\nFC=ccache /usr/local/gfortran/bin/gfortran' > $HOME/.R/Makevars
-
-      # install ccache and write config file
-      # mirror the setup described in https://github.com/rmacoslib/r-macos-rtools
-      - name: "[macOS-devel] ccache"
         if: runner.os == 'macOS' && matrix.config.r == 'devel'
         run: |
           brew install ccache
@@ -163,16 +149,18 @@ jobs:
           Rscript -e "if (!requireNamespace('remotes')) install.packages('remotes', type = 'source')"
           Rscript -e "if (getRversion() < '3.2' && !requireNamespace('curl')) install.packages('curl', type = 'source')"
 
-      - name: "[Custom block] [Linux] Start MySQL"
+      - name: "[Custom block] [Linux] Install MySQL & Postgresql"
         if: runner.os == 'Linux'
         run: | 
+          sudo postgresql postgresql-contrib
           sudo /etc/init.d/mysql start
           
-      - name: "[Custom block] [macOS] Install MySQL"
+      - name: "[Custom block] [macOS] Install MySQL & Postgresql"
         if: runner.os == 'macOS'
         run: | 
-          brew install mysql
+          brew install mysql postgresql
           mysql.server start
+          brew services start postgresql
 
       - name: "[Custom block] Prepare MySQL"
         run: |
