--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-## tic GitHub Actions template: linux-macos-windows-deploy
+## tic GitHub Actions template: custom-deploy
 ## revision date: 2020-05-09
 on:
   push:
@@ -20,22 +20,21 @@ jobs:
       fail-fast: false
       matrix:
         config:
-          # comment out lines if you do not want to build on certain platforms
-          # [Custom env var matrix]
+          # [Custom matrix env var]
           - { os: macOS-latest, r: "devel", TIC_ONLY_TESTS: true, TIC_DEV_VERSIONS: true,  id: "TIC_ONLY_TESTS & TIC_DEV_VERSIONS" }
-          # [Custom env var matrix]
+          # [Custom matrix env var]
           - { os: macOS-latest, r: "devel" }
-          # [Custom env var matrix]
-          - { os: macOS-latest, r: "release" }
-          ## [Custom env var matrix]
+          # [Custom matrix env var]
+          - { os: macOS-latest, r: "release", pkgdown: "true" }
+          # [Custom matrix env var]
           - { os: ubuntu-latest, r: "release", TIC_ONLY_STYLER: true, id: "TIC_ONLY_STYLER" }
-          ## [Custom env var matrix]
+          # [Custom matrix env var]
           - { os: ubuntu-latest, r: "release", MODE: "db-tests", id: "db-tests" }
-          # [Custom env var matrix]
+          # [Custom matrix env var]
           - { os: ubuntu-latest, r: 3.6 }
-          # [Custom env var matrix]
+          # [Custom matrix env var]
           - { os: ubuntu-latest, r: 3.5 }
-          # [Custom env var matrix]
+          # [Custom matrix env var]
           - { os: ubuntu-latest, r: 3.4 }
 
     env:
@@ -152,7 +151,7 @@ jobs:
       - name: "[Custom block] [Linux] Install MySQL & Postgresql"
         if: runner.os == 'Linux'
         run: | 
-          sudo postgresql postgresql-contrib
+          sudo install postgresql postgresql-contrib
           sudo /etc/init.d/mysql start
           
       - name: "[Custom block] [macOS] Install MySQL & Postgresql"
