--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,5 @@
 ## tic GitHub Actions template: custom-deploy
-## revision date: 2020-05-20
+## revision date: 2020-05-21
 on:
   push:
   pull_request:
@@ -23,29 +23,29 @@ jobs:
         config:
           # Custom configs
           # [Custom matrix env var]
-          - { os: ubuntu-latest, r: 3.4, id: "default" }
-          # [Custom matrix env var]
-          - { os: ubuntu-latest, r: 3.5, id: "default" }
-          # [Custom matrix env var]
-          - { os: ubuntu-latest, r: 3.6, id: "default" }
-          # [Custom matrix env var]
-          - { os: ubuntu-latest, r: "release", MODE: "db-tests", id: "db-tests" }
-          # [Custom matrix env var]
-          - { os: ubuntu-latest, r: "release", TIC_ONLY_STYLER: true, id: "TIC_ONLY_STYLER" }
-          # [Custom matrix env var]
-          - { os: macOS-latest, r: "release", pkgdown: "true", id: "pkgdown"}
+          - { os: macOS-latest, r: "devel", TIC_ONLY_TESTS: true, TIC_DEV_VERSIONS: true,  id: "TIC_ONLY_TESTS & TIC_DEV_VERSIONS" }
           # [Custom matrix env var]
           - { os: macOS-latest, r: "devel", id: "default" }
           # [Custom matrix env var]
-          - { os: macOS-latest, r: "devel", TIC_ONLY_TESTS: true, TIC_DEV_VERSIONS: true,  id: "TIC_ONLY_TESTS & TIC_DEV_VERSIONS" }
+          - { os: macOS-latest, r: "release", pkgdown: "true", id: "pkgdown"}
+          # [Custom matrix env var]
+          - { os: ubuntu-latest, r: "release", TIC_ONLY_STYLER: true, id: "TIC_ONLY_STYLER" }
+          # [Custom matrix env var]
+          - { os: ubuntu-latest, r: "release", MODE: "db-tests", id: "db-tests" }
+          # [Custom matrix env var]
+          - { os: ubuntu-latest, r: 3.6, id: "default" }
+          # [Custom matrix env var]
+          - { os: ubuntu-latest, r: 3.5, id: "default" }
+          # [Custom matrix env var]
+          - { os: ubuntu-latest, r: 3.4, id: "default" }
 
     env:
       # [Custom env var]
-      _R_CHECK_PACKAGE_DEPENDS_IGNORE_MISSING_ENHANCES: true
+      _R_CHECK_FORCE_SUGGESTS_: false
       # [Custom env var]
       _R_CHECK_SYSTEM_CLOCK_: false
       # [Custom env var]
-      _R_CHECK_FORCE_SUGGESTS_: false
+      _R_CHECK_PACKAGE_DEPENDS_IGNORE_MISSING_ENHANCES: true
       # otherwise remotes::fun() errors cause the build to fail. Example: Unavailability of binaries
       R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
       CRAN: ${{ matrix.config.cran }}
@@ -64,6 +64,7 @@ jobs:
       BUILD_PKGDOWN: ${{ matrix.config.pkgdown }}
       # macOS >= 10.15.4 linking
       SDKROOT: /Library/Developer/CommandLineTools/SDKs/MacOSX.sdk
+      # use GITHUB_TOKEN from GItHub to workaround rate limits in {remotes}
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
 
     steps:
