--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,21 +23,23 @@ jobs:
         config:
           # Custom configs
           # [Custom matrix env var]
-          - { os: macOS-latest, r: "devel", TIC_ONLY_TESTS: true, TIC_DEV_VERSIONS: true,  id: "TIC_ONLY_TESTS & TIC_DEV_VERSIONS" }
+          # - { os: macOS-latest, r: "devel", TIC_ONLY_TESTS: true, TIC_DEV_VERSIONS: true,  id: "TIC_ONLY_TESTS & TIC_DEV_VERSIONS" }
+          # # [Custom matrix env var]
+          # - { os: macOS-latest, r: "devel", id: "default" }
+          # # [Custom matrix env var]
+          # - { os: macOS-latest, r: "release", pkgdown: true, id: "pkgdown"}
+          # # [Custom matrix env var]
+          # - { os: ubuntu-latest, r: "release", TIC_ONLY_STYLER: true, id: "TIC_ONLY_STYLER" }
+          # # [Custom matrix env var]
+          # - { os: ubuntu-latest, r: "release", MODE: "db-tests", id: "db-tests" }
+          # # [Custom matrix env var]
+          # - { os: ubuntu-latest, r: 3.6, id: "default" }
+          # # [Custom matrix env var]
+          # - { os: ubuntu-latest, r: 3.5, id: "default" }
+          # # [Custom matrix env var]
+          # - { os: ubuntu-latest, r: 3.4, id: "default" }
           # [Custom matrix env var]
-          - { os: macOS-latest, r: "devel", id: "default" }
-          # [Custom matrix env var]
-          - { os: macOS-latest, r: "release", pkgdown: true, id: "pkgdown"}
-          # [Custom matrix env var]
-          - { os: ubuntu-latest, r: "release", TIC_ONLY_STYLER: true, id: "TIC_ONLY_STYLER" }
-          # [Custom matrix env var]
-          - { os: ubuntu-latest, r: "release", MODE: "db-tests", id: "db-tests" }
-          # [Custom matrix env var]
-          - { os: ubuntu-latest, r: 3.6, id: "default" }
-          # [Custom matrix env var]
-          - { os: ubuntu-latest, r: 3.5, id: "default" }
-          # [Custom matrix env var]
-          - { os: ubuntu-latest, r: 3.4, id: "default" }
+          - { os: ubuntu-latest, r: 3.3, id: "default" }
 
     env:
       # [Custom env var]
