--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,8 +24,10 @@ jobs:
           # Custom configs
           # [Custom matrix env var]
           # - { os: macOS-latest, r: "devel", TIC_ONLY_TESTS: true, TIC_DEV_VERSIONS: true,  id: "TIC_ONLY_TESTS & TIC_DEV_VERSIONS" }
-          # # [Custom matrix env var]
-          # - { os: macOS-latest, r: "devel", id: "default" }
+          # [Custom matrix env var]
+          #- { os: macOS-latest, r: "devel", id: "default" }
+          # [Custom matrix env var]
+          - { os: windows-latest, r: "devel", id: "default" }
           # # [Custom matrix env var]
           # - { os: macOS-latest, r: "release", pkgdown: true, id: "pkgdown"}
           # # [Custom matrix env var]
@@ -39,7 +41,7 @@ jobs:
           # # [Custom matrix env var]
           # - { os: ubuntu-latest, r: 3.4, id: "default" }
           # [Custom matrix env var]
-          - { os: ubuntu-latest, r: 3.3, id: "default" }
+          #- { os: ubuntu-latest, r: 3.3, id: "default" }
 
     env:
       # [Custom env var]
